# bayesblend

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-app.yml  test.yml
bayesblend/: __init__.py  blend.py  io.py  models.py  plot.py  weights.py
bayesblend/stan_files/: hierarchical_stacking.stan  hierarchical_stacking_pooling.stan  stacking.stan
docs/: index.md
docs/developer-guide/: contributing.md  index.md
docs/stylesheets/: extra.css
docs/user-guide/: arviz.md  blending.md  getting-started.md  index.md  installation.md  simulation.md
docs/user-guide/scripts/: getting_started.py  simulation.py
test/: conftest.py  fixtures.py  io_test.py  models_test.py  plot_test.py
test/stan_data/: bernoulli_data.json
test/stan_files/: bernoulli_ppc.stan  bernoulli_ppc_3d.stan  bernoulli_ppc_diff_name.stan
