[tool.poetry]
name = "bayesblend"
version = "0.1.0"
description = "Easy to use Bayesian model averaging and Bayesian stacking for all your model blending needs!"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
cmdstanpy = "^1.2.1"
scipy = "^1.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pandas-stubs = "^2.2.1.240316"
ruff = "^0.3.4"
black = "^24.3.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.17"

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.mypy]
exclude = ['test']

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
