[tool.poetry]
name = "bayesblend"
version = "0.1.0"
description = "Easy to use Bayesian model averaging and Bayesian stacking for all your model blending needs!"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
cmdstanpy = "^1.2.1"
scipy = "^1.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pandas-stubs = "^2.2.1.240316"
ruff = "^0.3.4"
black = "^24.3.0"

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.mypy]
exclude = ['test']

[tool.ruff]
line-length = 88

[tool.semantic_release]
version_variable = [
    "bayesblend/__init__.py:__version__",
    "pyproject.toml:version",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pipx install poetry && poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
